# GIRIGHT

./: .gitignore  README.md  config.py  pyproject.toml  run.py  seed.py
app/: forms.py  models.py  routes.py
app/static/: style.css
app/templates/: add_gear.html  add_gear_confirm.html  edit_gear.html  index.html  packlist.html  search_results.html  stats.html
