[project]
name = "giright"
version = "0.1.0"
description = ""
authors = [
    {name = "mump0nd",email = "mumpond@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blinker (==1.9.0)",
    "click (==8.1.8)",
    "flask (==3.1.0)",
    "flask-sqlalchemy (==3.1.1)",
    "flask-wtf (==1.2.2)",
    "greenlet (==3.1.1)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.2)",
    "sqlalchemy (==2.0.39)",
    "typing-extensions (==4.12.2)",
    "werkzeug (==3.1.3)",
    "wtforms (==3.2.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
